<resources>
    <!-- App related -->
    <string name="app_name">Shopping Camera</string>


    <!-- Drawer Options -->
    <string name="nav_home">Home</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_support">Support</string>
    <string name="nav_about">About</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="nav_cont_desc">Logo Photo</string>
    <string name="user_name">Emily Fisher</string>
    <string name="user_email">EmmyFi24@shopping.com</string>


    <!-- Home Fragment -->
    <string name="home_welcome">Welcome to Shopping Camera</string>
    <string name="home_legend">Making shopping list more visual</string>
    <string name="home_image_desc">App Logo</string>


    <!-- CameraXAPP Strings -->
    <string name="camera_button_desc">Capture Button</string>


    <!-- ImageSaving Strings -->
    <string name="image_saving_name">Name</string>
    <string name="image_saving_desc">Description</string>
    <string name="image_saving_price">Price</string>
    <string name="image_saving_button">Save Image</string>

    <string name="image_saving_name_hint">Enter name</string>
    <string name="image_saving_desc_hint">Enter description</string>
    <string name="image_saving_price_hint">Enter price</string>


    <!-- Edit Image -->
    <string name="edit_name">Name</string>
    <string name="edit_desc">Description</string>
    <string name="edit_price">Price</string>
    <string name="edit_button">Save Edit</string>
    <string name="edit_delete_button">Delete Image</string>


    <!-- Gallery Page -->
    <string name="gallery_item_desc">Gallery Item</string>

    <string name="imageview_name">Name</string>
    <string name="imageview_desc">Description</string>
    <string name="imageview_price">Price</string>
    <string name="imageview_edit">Edit Information</string>


    <!-- Support Page -->
    <string name="support_tittle">Send Us an Email!</string>
    <string name="support_email_hint">Enter email address</string>
    <string name="support_subject_hint">Subject</string>
    <string name="support_message_hint">Message</string>
    <string name="support_send_button">Send</string>


    <!-- About Page -->
    <string name="about_tittle">UNIVERSIDAD AUTONOMA DE BAJA CALIFORNIA</string>
    <string name="about_faculty">Facultad de Ciencias Quimicas e Ingenieria</string>
    <string name="about_student">Pablo Constantino Leon Romero</string>
    <string name="about_id">Matricula: 1253171</string>
    <string name="about_subject">Programacion de Dispositivos Moviles</string>
    <string name="about_project">Proyecto Final</string>
    <string name="about_date">Tijuana, Baja California. 1 de Junio de 2022.</string>

</resources>