<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_baseline_camera_alt_24"
            android:title="@string/nav_camera" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/gallery"
            android:title="@string/nav_gallery" />
    </group>

    <item android:title="@string/nav_support">
        <menu>

            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/support"
                android:title="@string/nav_support" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/nav_about" />
        </menu>
    </item>


</menu>