<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar"/>

    <TextView
        android:id="@+id/about_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_mono_regular"
        android:text="@string/about_tittle"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/about_faculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_mono_regular"
        android:text="@string/about_faculty"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo_uabc" />

    <TextView
        android:id="@+id/about_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_mono_regular"
        android:text="@string/about_student"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/about_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_mono_regular"
        android:text="@string/about_id"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/about_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_mono_regular"
        android:text="@string/about_subject"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/about_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_mono_regular"
        android:text="@string/about_project"
        android:textAlignment="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/about_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_mono_regular"
        android:text="@string/about_date"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20dp" />


</LinearLayout>