<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar"/>

    <ImageView
        android:id="@+id/imageview_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@android:color/holo_red_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/imageview_name" />

        <TextView
            android:id="@+id/imageview_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imageview_desc" />

        <TextView
            android:id="@+id/imageview_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imageview_price" />

        <TextView
            android:id="@+id/imageview_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

        <Button
            android:id="@+id/imageview_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onEditImage"
            android:layout_gravity="center_horizontal"
            android:text="@string/imageview_edit"/>

    </LinearLayout>

</LinearLayout>