<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".camera.ImageSavingActivity">

    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar"/>

    <ImageView
        android:id="@+id/imageview_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@android:color/holo_red_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/image_saving_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/image_saving_name" />

        <EditText
            android:id="@+id/image_saving_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/image_saving_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/image_saving_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_saving_desc" />

        <EditText
            android:id="@+id/image_saving_input_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@+id/image_saving_desc"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/image_saving_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_saving_price" />

        <EditText
            android:id="@+id/image_saving_input_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:labelFor="@+id/image_saving_price"
            android:textSize="18sp" />

        <Button
            android:id="@+id/image_saving_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onSaveImage"
            android:text="@string/image_saving_button"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>