<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_main"
            android:id="@+id/toolbar"/>

        <TextView
            android:id="@+id/home_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_mono_regular"
            android:text="@string/home_welcome"
            android:textAlignment="center"
            android:textSize="60sp" />

        <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_png"
            android:contentDescription="@string/home_image_desc" />

        <TextView
            android:id="@+id/home_legend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_mono_regular"
            android:text="@string/home_legend"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textSize="40sp" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>